apply plugin: 'java'
apply plugin: 'maven'
apply plugin: 'eclipse'

group = 'com.mcentric.jersey2'
version = '0.0.2-SNAPSHOT'

repositories {
  mavenCentral()
}


sourceCompatibility = 1.7
targetCompatibility = 1.7

dependencies {
    compile  'javax.ws.rs:javax.ws.rs-api:2.0'
    
    testCompile 'junit:junit:4.11'
    testCompile 'org.databene:contiperf:2.2.0'
    testCompile 'org.glassfish.jersey.core:jersey-server:2.1'
    testCompile 'org.glassfish.jersey.containers:jersey-container-grizzly2-http:2.1'
    testCompile 'org.glassfish.jersey.containers:jersey-container-grizzly2-servlet:2.1'
    testCompile 'org.glassfish.jersey.containers:jersey-container-servlet:2.1'
    
    
}


test {
    testLogging {
        // Show that tests are run in the command-line output
        events 'started', 'passed'
    }
    maxHeapSize = "1024M"
    jvmArgs("-XX:MaxPermSize=256M")

}
